--- a/resultPage/analysis.html
+++ b/resultPage/analysis.html
@@ -18,6 +18,7 @@
     <div id="heading">
         ANALYSIS REPORT
     </div>
+    
     <div>
         <table class="center" id="show">
             <tbody>
@@ -34,6 +35,9 @@
             </tbody>
 
         </table>
+
+        
+        <a class="nav-link btn-primary" id="a1" href="../index.html">Home</a>
     </div>
     <footer>
 
